feat(media page): add vocabulary cards, components for both articles and videos, markdown renderer for the text
Ref #11

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,3 +81,26 @@
     border-color: hsl(var(--primary) / 0.1);
   }
 }
+
+/* prose styles to fix code styling */
+.prose-quoteless blockquote {
+  quotes: none;
+}
+
+.prose-quoteless code::before,
+.prose-quoteless code::after {
+  content: none !important;
+}
+
+.prose-quoteless blockquote > p:first-of-type::before {
+  content: none !important;
+}
+
+.prose-quoteless blockquote > p:last-of-type::after {
+  content: none !important;
+}
+
+.prose-quoteless blockquote > p::before,
+.prose-quoteless blockquote > p::after {
+    content: none !important;
+}
